k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: researchpadi
  labels:
    app.kubernetes.io/part-of: researchpadi
    environment: production
